small performance improvement - "new Integer(n)" replaced with "Integer.valueOf(n)"